MDEV-20278 PERCENTILE_DISC() returns a wrong data type